Version 0.5.0
-------------
* Fixed GH#20 where doclineno_end was incorrectly parsed
* Fixed issue where google style block lineno was incorrect
* Added config option for lineno offsets. (corresponding arguments added to
  native and pytest runners)
* Add support for Python 3.7


Version 0.4.1
-------------
* Fixed bug with reporting ellapsed time in native runner


Version 0.4.0
-------------
* Added auto parsing style. This first tries to use Google, but falls back on
  freeform if no google-style doctests are found.
* Errors are no longer printed twice if only a single test is being run.
* All parsers now default to the new "auto" style.
* Added command "dump" to native runner that reformats enabled doctests so they
  can be run as unit tests.
* Implemented delayed want mtaching. This enables doctests to use multiple
  print statements in a row and use a single want statement to check all of
  their output.
* Colorized doctest now highlights "want" lines in a distinct (green) color

Version 0.3.5
-------------
* Changed development status to Beta
* Output difference now strips the BLANKLINE marker if enabled

Version 0.3.4
-------------
* The reported difference between got and want now preserves newlines for
  better visibility.

Version 0.3.3
-------------
* Fixed bug where pytest would collect all tests twice 
  (because the __init__.py file was normalized to a directory in package_modpaths)

Version 0.3.2
-------------
* API update to facilitate mkinit

Version 0.3.1
-------------
* Improved doctest syntax error message
* PythonPathContext no longer breaks if small changes to the path occur in its context.
* PythonPathContext can now insert into front or back of sys.path
* Flags can now be specified before or after positional arguments when using the __main__ script

Version 0.3.0
-------------
* Can now override sys.path when calling modname_to_modpath and is_modname_importable (api change)
* Added entry point script