@@ -1,5 +1,20 @@
 # -*- coding: utf-8 -*-
-# flake8: noqa
+"""
+mkinit xdoctest --nomods
+"""
 __version__ = '0.5.0.dev'  # nocover
-from xdoctest.exceptions import ExitTestException
-from xdoctest.runner import doctest_module  # nocover
+
+
+# Expose only select submodules
+__submodules__ = [
+    'runner',
+    'exceptions',
+]
+
+
+from xdoctest.runner import (doctest_module,)
+from xdoctest.exceptions import (DoctestParseError, ExitTestException,
+                                 MalformedDocstr,)
+
+__all__ = ['DoctestParseError', 'ExitTestException', 'MalformedDocstr',
+           'doctest_module']
