@@ -13,7 +13,7 @@ from os.path import exists
 from fnmatch import fnmatch
 from xdoctest import dynamic_analysis as dynamic
 from xdoctest import static_analysis as static
-from xdoctest import docscrape_google
+from xdoctest.docstr import docscrape_google
 from xdoctest import parser
 from xdoctest import exceptions
 from xdoctest import doctest_example
